--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,14 @@
-<p>
-  home works!
-</p>
+<div class="container custom-container">
+  <div class="jumbotron custom-container">
+    <!--<h1>Parking Booking Solution</h1>
+    <p>Users can get learn about parking areas for particular locations. The system provides a graphical view of the parking
+      spaces. It excludes the need of human efforts for managing parking spaces</p>-->
+  </div>
+
+</div>
+
+<div class="container-after">
+  <h1>One-to-One Chatting &amp; Image Sharing System</h1>
+  <p>Chatting, image, audio and video sharing is possible between two or more people using mobile phones which is common now-
+    a-days. This system enables user to send or receive messages and images with mobile phone and personal computer. </p>
+</div>
