--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,7 +1,7 @@
 .success-background{
-    background-color: #449d44;
-    border-color: #398439;
-    color: #ffffff;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
 }
 
 .success-link{
@@ -10,4 +10,8 @@
 
 .success-link:hover{
      color:#9d9d9d !important;
+}
+
+.brand-link{
+     color:#ffffff !important;
 }
