--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-inverse success-background">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand success-link" [routerLink]="['home']">Campus Recruitment</a>
+      <a class="navbar-brand brand-link" #home>Chat Buddy</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a [routerLink]="['home']" class="success-link">Home</a></li>
-      <li><a [routerLink]="['about']" class="success-link">About</a></li>
+      <!--<li><a [routerLink]="['home']" class="success-link">Home</a></li>
+      <li><a [routerLink]="['about']" class="success-link">About</a></li>-->
       <!--<li><a href="#">Page 2</a></li>-->
     </ul>
     <ul class="nav navbar-nav navbar-right">
