--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,3 +1,3 @@
 <div class="contacts" *ngFor="let user of users; let num = index" (click)='selectUser(user, userstyle)' [ngClass]="{selected: selectedContact == user.userName}">
-  <span #userstyle>{{user.userName}}</span>
+  <span #userstyle *ngIf='user.id != cureentUser'>{{user.userName}}</span>
 </div>
